Fixing horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-  --height: 100vh;
-  --diference: 30vh;
-}
 
 * {
   box-sizing: border-box;
@@ -48,22 +44,25 @@ a:hover {
 }
 
 .wrapper1 {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  max-width: 100vw;
+  height:750px;
+  max-height: 600px;
   background: url(https://web.archive.org/web/20140228114747im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg) no-repeat 50% 100%;
-  flex: 1 1 600px;
 }
 
 .products {
   background: linear-gradient(#808080 50%, #707070 50%);
-  width: 980px;
+  width: 70%;
+  max-width: 940px;
   height: 36px;
   border-radius: 5px;
   margin-top: -70px;
+  display: flex;
+  flex-direction: column;
 }
 
 .products ul {
@@ -74,7 +73,7 @@ a:hover {
 }
 
 .product {
-  flex: 1;
+  flex:1;
   height: 36px;
   background: url(images/globalnav_text.svg) no-repeat center;
   border-right: 1px solid rgb(107, 107, 107);
@@ -86,27 +85,28 @@ a:hover {
 }
 
 .search {
+  height: 21px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 187px;
+  background: url(images/globalsearch_field.png) no-repeat center 1px;
+  transition: 0.2s;
 }
+
 
 .searcher {
-  width: 85%;
-  border-radius: 6px;
   border: 0;
-  height: 20px;
-  background: url(images/globalsearch_field.png) no-repeat center 1px;
-  background-size: cover;
+  width: 100px;
+  background: transparent;
+
 }
+
 
 .search:hover {
-  flex: 2;
-}
-
-.searcher:hover {
-  width: 70%;
-  background-position-y: -19px;
-  background-size: cover;
+  width: 220px;
+  background-size: 150px;
+  background-position-y: -22px;
 }
 
 /* Sprites NavBar */
@@ -153,6 +153,10 @@ a:hover {
   justify-content: space-around;
 }
 
+.titles img {
+  width: 100%;
+}
+
 .title {
   clip-path: inset(0 0 27px 0);
 }
@@ -178,6 +182,7 @@ a:hover {
   display: flex;
   border: 1px solid white;
   width: 100%;
+  max-width: 1445px;
   height: 200px;
 }
 
@@ -208,26 +213,30 @@ a:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
-  width: 80vw;
+  width:80vw;
   max-width: 1000px;
   margin-top: 20px;
   color: #6e6e6e;
 }
 
 .wrapper-footer .contact {
-  margin: 0;
+  flex:1;
+  margin: 0 0 0 10px;
   padding: 0;
   display: flex;
   align-items: center;
+  justify-content:flex-end;
 }
 
 .contact li {
   display: flex;
   align-items: baseline;
+  text-align: center;
 }
 
 .wrapper-footer a {
-  font-size: 10px;
+  font-size: 9px;
+  align-self: center;
 }
 
 .contact li a {
